feat: add redux-toolkit, create slice

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.6",
     "clsx": "^2.1.1",
     "i18next": "^24.2.2",
@@ -21,7 +22,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "reselect": "^5.1.1",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
