feat: add map, table, reafactor detail component

--- a/package.json
+++ b/package.json
@@ -15,20 +15,26 @@
     "@material-tailwind/react": "^2.1.10",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.6",
+    "@types/mapbox-gl": "^3.4.1",
+    "@types/node": "^22.13.9",
+    "@types/react-map-gl": "^6.1.7",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.2",
     "keen-slider": "^6.8.6",
+    "mapbox-gl": "^3.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.0",
+    "react-map-gl": "^7.1.9",
     "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "reselect": "^5.1.1",
     "tailwind-merge": "^3.0.1",
+    "use-debounce": "^10.0.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
