feat: finish detailed page, create view on map page

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.6",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^22.13.9",
     "@types/react-map-gl": "^6.1.7",
@@ -24,6 +25,7 @@
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.2",
     "keen-slider": "^6.8.6",
+    "lodash.isequal": "^4.5.0",
     "mapbox-gl": "^3.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
