feat: create KnowledgeRealEstate page, begin profile page

--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.0",
     "react-map-gl": "^7.1.9",
+    "react-markdown": "^10.1.0",
     "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "reselect": "^5.1.1",
     "tailwind-merge": "^3.0.1",
     "use-debounce": "^10.0.4",
