--- a/package.json
+++ b/package.json
@@ -9,22 +9,28 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.6",
+    "@types/axios": "^0.14.4",
+    "@types/json-server": "^0.14.7",
     "@types/lodash.isequal": "^4.5.8",
     "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^22.13.9",
     "@types/react-map-gl": "^6.1.7",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.8.4",
+    "axios-hooks": "^5.1.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.2",
+    "json-server": "^1.0.0-beta.3",
     "keen-slider": "^6.8.6",
     "lodash.isequal": "^4.5.0",
     "mapbox-gl": "^3.10.0",
