--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.2",
+    "jwt-decode": "^4.0.0",
     "keen-slider": "^6.8.6",
     "lodash.isequal": "^4.5.0",
     "mapbox-gl": "^3.10.0",
