feat: add socket connection for add messages

--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@tailwindcss/vite": "^4.0.6",
     "@types/axios": "^0.14.4",
     "@types/lodash.isequal": "^4.5.8",
+    "@types/lodash.orderby": "^4.6.9",
     "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^22.13.9",
     "@types/react-map-gl": "^6.1.7",
+    "@types/socket.io-client": "^3.0.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.8.4",
     "axios-hooks": "^5.1.1",
@@ -31,6 +33,7 @@
     "jwt-decode": "^4.0.0",
     "keen-slider": "^6.8.6",
     "lodash.isequal": "^4.5.0",
+    "lodash.orderby": "^4.6.0",
     "mapbox-gl": "^3.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -43,6 +46,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "reselect": "^5.1.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.1",
     "use-debounce": "^10.0.4",
     "uuid": "^11.1.0",
